# indico-plugin-event-countdown

./: .gitignore  MANIFEST.in  README.md  manage-i18n.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  url_map.json  webpack-build-config.json  webpack-bundles.json
.github/workflows/: checkin.yml
indico_countdown_plugin/: __init__.py  controllers.py  forms.py  plugin.py  views.py
indico_countdown_plugin/templates/: countdown_display.html
indico_countdown_plugin/translations/: messages.pot
indico_plugin_event_timer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
indico_timer_plugin/: __init__.py  plugin.py
indico_timer_plugin/client/: index.js
indico_timer_plugin/templates/: event_timer_settings.html  timer_plugin_clock.html
src/indico_countdown_plugin/: forms.py
src/indico_countdown_plugin/templates/: event_countdown_settings.html
