[metadata]
name = indico-plugin-event-timer
version = 3.2
description = A countdown timer for events
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/aflynn50/indico-event-timer-plugin
license = MIT
author = Alastair Flynn
author_email = alastair.flynn@canonical.com 
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.9.0, <3.11
install_requires =
    indico>=3.2

[options.entry_points]
indico.plugins =
    countdown = indico_countdown_plugin.plugin:CountdownPlugin

[flake8]
max-line-length = 88
extend-ignore = E203
inline-quotes = "

[isort]
profile = black


[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
