[metadata]
name = indico-plugin-event-countdown
version = 1.0.1
url = https://github.com/arturo-seijas/indico-plugin-event-countdown
license = GPLv3
author = Philipp Kewisch
author_email = philipp.kewisch@canonical.com
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: Apache 2.0
    Programming Language :: Python :: 3.9

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.9.0, <3.11
install_requires =
    indico>=3.0

[options.entry_points]
indico.plugins =
    countdown = indico_countdown_plugin.plugin:CountdownPlugin

[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
