[metadata]
name = indico-plugin-event-countdown
version = 1.0.1
url = https://github.com/arturo-seijas/indico-plugin-event-countdown
license = GPLv3
author = Philipp Kewisch
author_email = philipp.kewisch@canonical.com
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: Apache 2.0
    Programming Language :: Python :: 3.9

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.9.0, <3.13
install_requires =
    indico>=3.0

[options.extras_require]
dev = tox==4.14.2


[options.entry_points]
indico.plugins =
    countdown = indico_countdown_plugin.plugin:CountdownPlugin

[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[tox:tox]
envlist = py3

[isort]
profile = black

[testenv]
allowlist_externals = npx
deps =
  black
  isort
  flake8
commands =
  black indico_countdown_plugin
  isort indico_countdown_plugin
  flake8 indico_countdown_plugin
